gitops/minio/base/minio-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio
  labels:
    app.kubernetes.io/name: minio
spec:
  ports:
    - port: 9000
      protocol: TCP
      name: api
    - port: 33933
      protocol: TCP
      name: web
  selector:
    app.kubernetes.io/name: minio
  type: ClusterIP
  sessionAffinity: None
